Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-9290

InnoDB: Assertion failure in file trx0sys.cc line 353 InnoDB: Failing assertion: xid_seqno > trx_sys_cur_xid_seqno

Details

    • 10.1.10

    Description

      Repeatable with mtr test galera.galera_sst_rsync and very easily with rqg with command line:

       perl ./runall-new.pl --grammar=conf/galera/galera_stress.yy --gendata=conf/galera/galera_stress.zz --duration=4000 --queries=200M --threads=16 --galera=mmm --basedir=/home/jan/mysql/10.0-galera-git --vardir=/home/jan/mysql/galera-test "--mysqld=--wsrep-provider=/usr/lib/libgalera_smm.so" "--mysqld=--wsrep_sst_method=rsync" "--mysqld=--wsrep-causal-reads=ON" "--mysqld=--core" "--mysqld=--general-log" "--mysqld=--general-log-file=queries.log" "--mysqld=--log-output=file" "--mysqld=--wsrep-debug=ON" "--mysqld=--wsrep-sync-wait=7"

      Stack trace:

      stack_bottom = 0x7fc1eed9cef0 thread_stack 0x48000
      mysys/stacktrace.c:246(my_print_stacktrace)[0xe45fec]
      sql/signal_handler.cc:155(handle_fatal_signal)[0x85446c]
      /lib/x86_64-linux-gnu/libpthread.so.0(+0xf8d0)[0x7fc1eeaf18d0]
      /lib/x86_64-linux-gnu/libc.so.6(gsignal+0x37)[0x7fc1ed099107]
      /lib/x86_64-linux-gnu/libc.so.6(abort+0x148)[0x7fc1ed09a4e8]
      trx/trx0sys.cc:354(trx_sys_update_wsrep_checkpoint(xid_t const*, unsigned char*, mtr_t*))[0xbbef57]
      trx/trx0trx.cc:1243(trx_write_serialisation_history)[0xbc5a7d]
      trx/trx0trx.cc:1637(trx_commit_low(trx_t*, mtr_t*))[0xbc6a93]
      trx/trx0trx.cc:1666(trx_commit(trx_t*))[0xbc6b3c]
      trx/trx0roll.cc:1338(trx_rollback_finish)[0xbba5ed]
      trx/trx0roll.cc:124(trx_rollback_to_savepoint_low)[0xbb7eac]
      trx/trx0roll.cc:180(trx_rollback_for_mysql_low)[0xbb81e5]
      trx/trx0roll.cc:209(trx_rollback_for_mysql(trx_t*))[0xbb850f]
      handler/ha_innodb.cc:4533(innobase_rollback)[0xa41bfc]
      sql/handler.cc:1688(ha_rollback_trans(THD*, bool))[0x857f22]
      sql/transaction.cc:342(trans_rollback(THD*))[0x7815ec]
      sql/wsrep_applier.cc:330(wsrep_rollback)[0x7e3a25]
      sql/wsrep_applier.cc:358(wsrep_commit_cb(void*, unsigned int, wsrep_trx_meta const*, bool*, bool))[0x7e3b34]
      /usr/lib/libgalera_smm.so(+0x20c4a7)[0x7fc1ecddb4a7]
      /usr/lib/libgalera_smm.so(_ZN6galera13ReplicatorSMM9apply_trxEPvPNS_9TrxHandleE+0xab)[0x7fc1ecdde0fb]
      /usr/lib/libgalera_smm.so(_ZN6galera13ReplicatorSMM11process_trxEPvPNS_9TrxHandleE+0x10e)[0x7fc1ecde165e]
      /usr/lib/libgalera_smm.so(_ZN6galera15GcsActionSource8dispatchEPvRK10gcs_actionRb+0x1b8)[0x7fc1ecdbaf58]
      /usr/lib/libgalera_smm.so(_ZN6galera15GcsActionSource7processEPvRb+0x62)[0x7fc1ecdbcd32]
      /usr/lib/libgalera_smm.so(_ZN6galera13ReplicatorSMM10async_recvEPv+0x73)[0x7fc1ecde1b83]
      /usr/lib/libgalera_smm.so(galera_recv+0x18)[0x7fc1ecdf5a68]
      sql/wsrep_thd.cc:314(wsrep_replication_process)[0x7e5203]
      sql/mysqld.cc:5473(start_wsrep_THD)[0x593bec]
      /lib/x86_64-linux-gnu/libpthread.so.0(+0x80a4)[0x7fc1eeaea0a4]
      /lib/x86_64-linux-gnu/libc.so.6(clone+0x6d)[0x7fc1ed14a04d]

      Attachments

        Activity

          People

            nirbhay_c Nirbhay Choubey (Inactive)
            jplindst Jan Lindström (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.