sql/mysqld.cc
@@ -4617,10 +4617,20 @@ a file name for --log-bin-index option", opt_binlog_index_name);
         THD *current_thd_saved= current_thd;
         my_pthread_setspecific_ptr(THR_THD, tmp);
 
+        /*
+          Also save/restore server_status and variables.option_bits and they
+          get altered during init_for_queries().
+        */
+        unsigned int server_status_saved= tmp->server_status;
+        ulonglong option_bits_saved= tmp->variables.option_bits;
+
         tmp->init_for_queries();
 
         /* Restore current_thd. */
         my_pthread_setspecific_ptr(THR_THD, current_thd_saved);
+
+        tmp->server_status= server_status_saved;
+        tmp->variables.option_bits= option_bits_saved;
       }
     }
     mysql_mutex_unlock(&LOCK_thread_count);
@@ -4984,7 +4994,7 @@ error:
   WSREP_ERROR("Failed to create/initialize system thread");
 
   /* Abort if its the first applier/rollbacker thread. */
-  if (wsrep_creating_startup_threads < 2)
+  if (wsrep_creating_startup_threads == 1)
     unireg_abort(1);
   else
     return NULL;
